// Generated by polka.codes

import { describe, expect, test } from 'bun:test'
import type { Config } from '@polka-codes/cli-shared'
import { AiServiceProvider } from '@polka-codes/core'
import { ApiProviderConfig } from './ApiProviderConfig'

describe('ApiProviderConfig', () => {
  // Define test configurations
  const basicConfig: Config = {
    defaultProvider: AiServiceProvider.Anthropic,
    defaultModel: 'claude-3-opus',
    defaultParameters: {
      temperature: 0.7,
      top_p: 0.9,
    },
    providers: {
      anthropic: {
        apiKey: 'test-api-key',
        defaultModel: 'claude-3-haiku',
        defaultParameters: {
          temperature: 0.5,
          max_tokens: 2000,
        },
      },
      openai: {
        apiKey: 'test-openai-key',
        defaultParameters: {
          temperature: 0.8,
          presence_penalty: 0.2,
        },
      },
    },
  }

  test('constructor initializes providers and parameters', () => {
    const apiConfig = new ApiProviderConfig(basicConfig)

    expect(apiConfig.defaultProvider).toBe(AiServiceProvider.Anthropic)
    expect(apiConfig.providers.anthropic?.apiKey).toBe('test-api-key')
    expect(apiConfig.providers.anthropic?.defaultModel).toBe('claude-3-haiku')
    expect(apiConfig.providers.anthropic?.defaultParameters).toEqual({
      temperature: 0.5,
      max_tokens: 2000,
    })
  })

  test('getConfigForCommand resolves parameters correctly', () => {
    const configWithCommands: Config = {
      ...basicConfig,
      commands: {
        default: {
          provider: AiServiceProvider.Anthropic,
          model: 'claude-3-opus',
          parameters: {
            temperature: 0.6,
            max_tokens: 3000,
          },
        },
        task: {
          model: 'claude-3-sonnet',
          parameters: {
            temperature: 0.8,
          },
        },
      },
    }

    const apiConfig = new ApiProviderConfig(configWithCommands)

    // Test default command config
    const defaultConfig = apiConfig.getConfigForCommand('default')
    expect(defaultConfig).toMatchSnapshot()

    // Test specific command that inherits from default provider parameters
    const taskConfig = apiConfig.getConfigForCommand('task')
    expect(taskConfig).toMatchSnapshot()

    // Test command not defined (should use default)
    const undefinedCommandConfig = apiConfig.getConfigForCommand('undefined-command')
    expect(undefinedCommandConfig).toMatchSnapshot()
  })

  test('getConfigForAgent resolves parameters correctly', () => {
    const configWithAgents: Config = {
      ...basicConfig,
      agents: {
        default: {
          provider: AiServiceProvider.Anthropic,
          model: 'claude-3-opus',
          parameters: {
            temperature: 0.6,
            max_tokens: 3000,
          },
        },
        coder: {
          model: 'claude-3-sonnet',
          parameters: {
            temperature: 0.8,
          },
        },
        analyzer: {
          provider: AiServiceProvider.OpenRouter,
          parameters: {
            frequency_penalty: 0.3,
          },
        },
      },
    }

    const apiConfig = new ApiProviderConfig(configWithAgents)

    // Test default agent config
    const defaultConfig = apiConfig.getConfigForAgent('default')
    expect(defaultConfig).toMatchSnapshot()

    // Test specific agent that inherits provider
    const coderConfig = apiConfig.getConfigForAgent('coder')
    expect(coderConfig).toMatchSnapshot()

    // Test agent with different provider
    const analyzerConfig = apiConfig.getConfigForAgent('analyzer')
    expect(analyzerConfig).toMatchSnapshot()

    // Test agent not defined (should use default)
    const undefinedAgentConfig = apiConfig.getConfigForAgent('undefined-agent')
    expect(undefinedAgentConfig).toMatchSnapshot()
  })

  test('parameters inherit correctly from different levels', () => {
    const complexConfig: Config = {
      defaultProvider: AiServiceProvider.Anthropic,
      defaultModel: 'claude-3-opus',
      defaultParameters: {
        temperature: 0.7,
        top_p: 0.9,
        max_tokens: 4000,
      },
      providers: {
        anthropic: {
          apiKey: 'test-api-key',
          defaultParameters: {
            temperature: 0.5,
            presence_penalty: 0.1,
          },
        },
      },
      agents: {
        default: {
          parameters: {
            temperature: 0.6,
          },
        },
        coder: {
          model: 'claude-3-sonnet',
        },
      },
      commands: {
        default: {
          parameters: {
            top_p: 0.8,
          },
        },
        task: {},
      },
    }

    const apiConfig = new ApiProviderConfig(complexConfig)

    // Test inheritance for agent
    const coderConfig = apiConfig.getConfigForAgent('coder')
    expect(coderConfig?.parameters).toMatchSnapshot()

    // Test inheritance for command
    const taskConfig = apiConfig.getConfigForCommand('task')
    expect(taskConfig?.parameters).toMatchSnapshot()
  })

  test('handles missing providers gracefully', () => {
    const minimalConfig: Config = {
      defaultProvider: AiServiceProvider.Anthropic,
    }

    const apiConfig = new ApiProviderConfig(minimalConfig)

    const agentConfig = apiConfig.getConfigForAgent('coder')
    expect(agentConfig?.parameters).toEqual({})

    const commandConfig = apiConfig.getConfigForCommand('task')
    expect(commandConfig?.parameters).toEqual({})
  })

  test('returns undefined when no provider is configured', () => {
    const emptyConfig: Config = {}

    const apiConfig = new ApiProviderConfig(emptyConfig)

    expect(apiConfig.getConfigForAgent('coder')).toBeUndefined()
    expect(apiConfig.getConfigForCommand('task')).toBeUndefined()
  })

  test('handles global default parameters correctly', () => {
    const configWithGlobalDefaults: Config = {
      defaultProvider: AiServiceProvider.OpenRouter,
      defaultModel: 'gpt-4', // Assuming OpenRouter can use gpt-4
      defaultParameters: {
        temperature: 0.2,
        top_p: 0.2,
        frequency_penalty: 0.2,
      },
      providers: {
        openrouter: {
          // Changed from openai to openrouter
          apiKey: 'test-openrouter-key',
          // No defaultParameters here to test global override
        },
        anthropic: {
          apiKey: 'test-anthropic-key',
          defaultModel: 'claude-3-sonnet',
          defaultParameters: {
            temperature: 0.5, // This should override global temperature for Anthropic
            max_tokens: 1000, // This is specific to Anthropic
          },
        },
      },
      agents: {
        default: {
          // Uses OpenRouter by default, should inherit global params
        },
        coder: {
          provider: AiServiceProvider.Anthropic,
          // Uses Anthropic, should use Anthropic's params, overriding global temp
        },
        analyzer: {
          provider: AiServiceProvider.OpenRouter, // Changed from OpenAI
          parameters: {
            temperature: 0.3, // This should override global and provider temperature for this agent
            top_p: 0.3, // This should override global and provider top_p for this agent
          },
        },
      },
      commands: {
        default: {
          // Uses OpenRouter by default, should inherit global params
        },
        task: {
          provider: AiServiceProvider.Anthropic,
          parameters: {
            temperature: 0.6, // This should override global and Anthropic's temperature
            max_tokens: 1500, // This should override Anthropic's max_tokens
          },
        },
      },
    }

    const apiConfig = new ApiProviderConfig(configWithGlobalDefaults)

    // Agent: default (OpenRouter with global defaults)
    const defaultAgentConfig = apiConfig.getConfigForAgent('default')
    expect(defaultAgentConfig?.parameters).toMatchSnapshot('agent default - global params')

    // Agent: coder (Anthropic, merging global and Anthropic defaults)
    const coderAgentConfig = apiConfig.getConfigForAgent('coder')
    expect(coderAgentConfig?.parameters).toMatchSnapshot('agent coder - anthropic params override global')

    // Agent: analyzer (OpenRouter, with agent-specific overrides)
    const analyzerAgentConfig = apiConfig.getConfigForAgent('analyzer')
    expect(analyzerAgentConfig?.parameters).toMatchSnapshot('agent analyzer - agent params override global')

    // Command: default (OpenRouter with global defaults)
    const defaultCommandConfig = apiConfig.getConfigForCommand('default')
    expect(defaultCommandConfig?.parameters).toMatchSnapshot('command default - global params')

    // Command: task (Anthropic, with command-specific overrides)
    const taskCommandConfig = apiConfig.getConfigForCommand('task')
    expect(taskCommandConfig?.parameters).toMatchSnapshot('command task - command params override anthropic and global')

    // Test with only global defaults and no provider specific params
    const configOnlyGlobal: Config = {
      defaultProvider: AiServiceProvider.OpenRouter, // Changed from OpenAI
      defaultModel: 'gpt-3.5-turbo', // Assuming OpenRouter can use this
      defaultParameters: {
        temperature: 0.1,
        max_tokens: 500,
      },
      providers: {
        openrouter: {
          // Changed from openai to openrouter
          apiKey: 'another-openrouter-key',
          // No defaultParameters
        },
      },
      agents: {
        default: {}, // Should use global defaults
      },
    }
    const apiConfigOnlyGlobal = new ApiProviderConfig(configOnlyGlobal)
    const agentOnlyGlobalConfig = apiConfigOnlyGlobal.getConfigForAgent('default')
    expect(agentOnlyGlobalConfig?.parameters).toMatchSnapshot('agent default - only global params')
  })
})
