// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiProviderConfig getConfigForCommand resolves parameters correctly 1`] = `
{
  "apiKey": "test-api-key",
  "model": "claude-3-opus",
  "parameters": {
    "max_tokens": 3000,
    "temperature": 0.6,
  },
  "provider": "anthropic",
}
`;

exports[`ApiProviderConfig getConfigForCommand resolves parameters correctly 2`] = `
{
  "apiKey": "test-api-key",
  "model": "claude-3-sonnet",
  "parameters": {
    "temperature": 0.8,
  },
  "provider": "anthropic",
}
`;

exports[`ApiProviderConfig getConfigForCommand resolves parameters correctly 3`] = `
{
  "apiKey": "test-api-key",
  "model": "claude-3-opus",
  "parameters": {
    "max_tokens": 3000,
    "temperature": 0.6,
  },
  "provider": "anthropic",
}
`;

exports[`ApiProviderConfig getConfigForAgent resolves parameters correctly 1`] = `
{
  "apiKey": "test-api-key",
  "model": "claude-3-opus",
  "parameters": {
    "max_tokens": 3000,
    "temperature": 0.6,
  },
  "provider": "anthropic",
}
`;

exports[`ApiProviderConfig getConfigForAgent resolves parameters correctly 2`] = `
{
  "apiKey": "test-api-key",
  "model": "claude-3-sonnet",
  "parameters": {
    "temperature": 0.8,
  },
  "provider": "anthropic",
}
`;

exports[`ApiProviderConfig getConfigForAgent resolves parameters correctly 3`] = `
{
  "apiKey": undefined,
  "model": "anthropic/claude-3.7-sonnet",
  "parameters": {
    "frequency_penalty": 0.3,
  },
  "provider": "openrouter",
}
`;

exports[`ApiProviderConfig getConfigForAgent resolves parameters correctly 4`] = `
{
  "apiKey": "test-api-key",
  "model": "claude-3-opus",
  "parameters": {
    "max_tokens": 3000,
    "temperature": 0.6,
  },
  "provider": "anthropic",
}
`;

exports[`ApiProviderConfig parameters inherit correctly from different levels 1`] = `
{
  "presence_penalty": 0.1,
  "temperature": 0.5,
}
`;

exports[`ApiProviderConfig parameters inherit correctly from different levels 2`] = `
{
  "presence_penalty": 0.1,
  "temperature": 0.5,
}
`;

exports[`ApiProviderConfig handles global default parameters correctly: agent default - global params 1`] = `
{
  "frequency_penalty": 0.2,
  "temperature": 0.2,
  "top_p": 0.2,
}
`;

exports[`ApiProviderConfig handles global default parameters correctly: agent coder - anthropic params override global 1`] = `
{
  "max_tokens": 1000,
  "temperature": 0.5,
}
`;

exports[`ApiProviderConfig handles global default parameters correctly: agent analyzer - agent params override global 1`] = `
{
  "temperature": 0.3,
  "top_p": 0.3,
}
`;

exports[`ApiProviderConfig handles global default parameters correctly: command default - global params 1`] = `
{
  "frequency_penalty": 0.2,
  "temperature": 0.2,
  "top_p": 0.2,
}
`;

exports[`ApiProviderConfig handles global default parameters correctly: command task - command params override anthropic and global 1`] = `
{
  "max_tokens": 1500,
  "temperature": 0.6,
}
`;

exports[`ApiProviderConfig handles global default parameters correctly: agent default - only global params 1`] = `
{
  "max_tokens": 500,
  "temperature": 0.1,
}
`;
